Project

General

Profile

Actions

Bug #23627

closed

Error EACCES: problem getting command descriptions from mgr.None from 'ceph tell mgr'

Added by Sage Weil about 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-04-10T12:10:51.224 INFO:tasks.workunit.client.0.smithi118.stderr:/home/ubuntu/cephtest/clone.client.0/qa/workunits/cephtool/test.sh:2474: test_mgr_tell:  ceph tell mgr osd status
2018-04-10T12:10:51.299 INFO:tasks.workunit.client.0.smithi118.stderr:Error EACCES: problem getting command descriptions from mgr.None

rados/singleton-bluestore/{all/cephtool.yaml msgr-failures/many.yaml msgr/random.yaml objectstore/bluestore.yaml rados.yaml}

/a/sage-2018-04-10_06:01:55-rados-wip-sage-testing-2018-04-09-2247-distro-basic-smithi/2379545

Actions #1

Updated by Kefu Chai almost 6 years ago

/a//kchai-2018-04-27_07:23:02-rados-wip-kefu-testing-2018-04-27-0902-distro-basic-smithi/2444194

Actions #2

Updated by Kefu Chai almost 6 years ago

  • Assignee set to Kefu Chai
2018-04-27 21:01:30.449 7f264dc0a700 20 mgrc start_command cmd: [{"prefix": "get_command_descriptions"}]
2018-04-27 21:01:30.449 7f264dc0a700 20 mgrc start_command  no MgrMap, assuming EACCES
Error EACCES: problem getting command descriptions from mgr.None

the ceph cli need to be more patient for waiting for the mgrmap.

Actions #3

Updated by Kefu Chai almost 6 years ago

  • Status changed from 12 to Fix Under Review
Actions #4

Updated by Kefu Chai almost 6 years ago

  • Assignee changed from Kefu Chai to John Spray
Actions #6

Updated by Kefu Chai almost 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF