mgr/MgrClient: add mgr_optional mode

This is for use when talking to pre-luminous
clusters, where we should not block waiting
for MgrMap because it might never come.

Fixes: https://tracker.ceph.com/issues/23627
Signed-off-by: John Spray <john.spray@redhat.com>
(cherry picked from commit bae47183c2621577ba564d29c82a0517ab8a7f54)